--- a/src/index.css
+++ b/src/index.css
@@ -1556,6 +1556,7 @@ code {
   font-family: var(--fontPrimary);
   font-weight: 400;
   color: var(--tertiary);
+  background: transparent !important;
 }
 
 .company-id {
