--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ code {
   --accent3: #459412;
   --accent4: #7c1e1e;
   --branded: #8e11a5;
-  --bgprimary: #C53A31; 
+  --bgprimary: #C53A31;
 
   /* box shadow  */
   --card-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
@@ -887,8 +887,8 @@ code {
     padding: 5px 10px !important;
   }
 
-  .left-nav-title > button{
-       color: #fff !important;
+  .left-nav-title>button {
+    color: #fff !important;
   }
 }
 
@@ -1184,9 +1184,11 @@ code {
 .inquiries-name {
   margin-top: -25px !important;
 }
-.inquiries-name .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input{
+
+.inquiries-name .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
   padding: 9px 14px !important;
 }
+
 /* inquiries page end  */
 
 /* cuisines page start  */
@@ -1301,10 +1303,11 @@ code {
 
 
 /* Business profile page start  */
-.business-date-picker{
+.business-date-picker {
   margin-top: -10px;
 }
-.business-date-picker .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
+
+.business-date-picker .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
   padding: 9.5px 14px !important;
 }
 
@@ -1433,13 +1436,15 @@ code {
   border-top-right-radius: 24px;
 }
 
-.normal-color{
+.normal-color {
   background-color: #d9822b !important;
 }
-.popular-color{
+
+.popular-color {
   background-color: #8e11a5 !important;
 }
-.branded-color{
+
+.branded-color {
   background-color: #459412 !important;
 }
 
@@ -1972,3 +1977,165 @@ textarea:-webkit-autofill:active {
   color: var(--primarytext) !important;
 }
 
+/* .coupon-box{
+   margin-left: 4px;
+}
+
+.coupon-input[type=text] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  border-radius: 8px;
+}
+
+.coupon-input[type=text]:focus {
+  border: 3px solid #555;
+} */
+
+/*Clearing Floats*/
+.cf:before,
+.cf:after {
+  content: "";
+  display: table;
+}
+
+.cf:after {
+  clear: both;
+}
+
+.cf {
+  zoom: 1;
+}
+
+/* Form wrapper styling */
+
+.search-wrapper {
+  width: 96%;
+  margin: auto;
+  border-radius: 40px;
+  background: transparent;
+  box-shadow: 0 4px 20px -2px #e9e9e9;
+  display: flex;
+  align-items: center;
+  /* margin-bottom: 30px; */
+}
+
+/* Form text input */
+
+.search-wrapper input {
+  padding-left: 20px;
+  width: 330px;
+  height: 40px;
+  padding: 10px 5px;
+  float: left;
+  border: 0;
+  background: #fff;
+  /* border-radius: 40px;
+  border-top-style: none; */
+  border-bottom: 1px solid #00000024;
+  border-top: 1px solid #00000024;
+  border-left: 1px solid #00000024;
+}
+
+.search-wrapper input:focus {
+  outline: 0;
+  background: #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
+}
+
+.search-wrapper input::-webkit-input-placeholder {
+  color: #999;
+  font-weight: normal;
+  font-style: italic;
+  padding-left: 20px;
+}
+
+.search-wrapper input:-moz-placeholder {
+
+  color: #999;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.search-wrapper input:-ms-input-placeholder {
+  color: #999;
+  font-weight: normal;
+  font-style: italic;
+  border-style: none;
+}
+
+/* Form submit button */
+.search-wrapper button {
+  overflow: visible;
+  position: relative;
+  float: right;
+  padding: 0;
+  cursor: pointer;
+  height: 40px;
+  width: 110px;
+  font-size: 14px;
+  color: #908888;
+  text-transform: uppercase;
+  background: #84909500;
+  /* border-radius: 8px; */
+  border: 1px solid #00000030;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
+}
+
+.search-wrapper button:hover {
+  /*     background: #e54040; */
+}
+
+.search-wrapper button:active,
+.search-wrapper button:focus {
+  background: #52535414;
+  outline: 0;
+}
+
+.search-wrapper button:focus:before,
+.search-wrapper button:active:before {
+  border-right-color: #c42f2f;
+}
+
+.search-wrapper button::-moz-focus-inner {
+  /* remove extra button spacing for Mozilla Firefox */
+  border: 0;
+  padding: 0;
+}
+
+.coupon-flex {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.coupon-text {
+  font-size: 14px;
+  font-family: var(--fontPrimary);
+  font-weight: 400;
+  margin-bottom: 5px;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--secondarytext);
+}
+
+.diaplay-amt {
+  font-size: 16px;
+  font-family: var(--fontPrimary);
+  font-weight: 400;
+  margin-bottom: 5px;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--secondarytext);
+}
+
+.subscription-hr {
+  border: 0;
+  border-top: 2px solid #0000000f;
+}
