--- a/src/index.css
+++ b/src/index.css
@@ -573,8 +573,15 @@ code {
 .ct-box {
   box-shadow: var(--card-box-shadow);
   border-radius: var(--radiusOne);
-  /* text-align: center; */
   margin-top: -50px;
+  background-color: var(--primarybg);
+  padding-top: 20px;
+  padding-bottom: 50px;
+  margin-bottom: 40px;
+}
+.ct-box-details {
+  box-shadow: var(--card-box-shadow);
+  border-radius: var(--radiusOne);
   background-color: var(--primarybg);
   padding-top: 20px;
   padding-bottom: 50px;
@@ -1389,7 +1396,7 @@ code {
   margin-bottom: 5px;
   text-transform: capitalize;
   text-align: left;
-  color: var(--accent3);
+  color: var(--accent3) !important;
 }
 .subscription-red {
   font-size: 16px;
