--- a/src/index.css
+++ b/src/index.css
@@ -1167,7 +1167,7 @@ code {
 }
 
 .inquiries-red-btn {
-  background-color: var(--secondary) !important;
+  background-color: var(--accent3) !important;
   border-radius: var(--radiusOne) !important;
   font-size: 12px !important;
   text-transform: capitalize !important;
