--- a/src/index.css
+++ b/src/index.css
@@ -579,6 +579,7 @@ code {
   padding-bottom: 50px;
   margin-bottom: 40px;
 }
+
 .ct-box-details {
   box-shadow: var(--card-box-shadow);
   border-radius: var(--radiusOne);
@@ -1165,6 +1166,7 @@ code {
   font-size: 12px !important;
   text-transform: capitalize !important;
 }
+
 .add-inquiries-btn {
   background-color: var(--accent3) !important;
   border-radius: var(--radiusOne) !important;
@@ -1404,6 +1406,7 @@ code {
   text-align: left;
   color: var(--accent3) !important;
 }
+
 .subscription-red {
   font-size: 16px;
   font-family: var(--fontPrimary);
@@ -2172,29 +2175,61 @@ textarea:-webkit-autofill:active {
   border-top: 2px solid #0000000f;
 }
 
-.text-success{
+.text-success {
   color: var(--accent3) !important;
 }
-.text-danger{
+
+.text-danger {
   color: var(--accent2) !important;
 }
 
-.coupon-small{
+.coupon-small {
   font-size: 14px !important;
 }
 
 .checkbox-enabled {
-  color: green !important; /* Color for enabled state */
+  color: green !important;
+  /* Color for enabled state */
 }
 
 .checkbox-disabled {
-  color: rgba(0, 0, 0, 0.26) !important; /* Color for disabled state */
+  color: rgba(0, 0, 0, 0.26) !important;
+  /* Color for disabled state */
 }
 
 .truncate-text {
-  display: inline-block;   
-  max-width: 17ch;         
-  white-space: nowrap;    
-  overflow: hidden;        
-  text-overflow: ellipsis; 
+  display: inline-block;
+  max-width: 17ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+/* Custom styles for tabs */
+/* Base tab styles */
+.custom-tab {
+  border: 1px solid #d3d3d3;
+  border-radius: 20px;
+  padding: 4px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #757575;
+  background-color: #0a0a0a03 !important;
+  transition: all 0.3s ease-in-out;
+  max-width: 601px !important;
+  min-width: 190px !important;
+  text-align: center;
+}
+
+.custom-tab:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.active-tab {
+  color: black;
+  border-color: #ff6347;
+  background-color: #ffffff  !important;
+  box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
