--- a/src/index.css
+++ b/src/index.css
@@ -1179,6 +1179,12 @@ code {
   font-size: 12px !important;
   text-transform: capitalize !important;
 }
+.inquiries-btn-green {
+  background-color: var(--accent3) !important;
+  border-radius: var(--radiusOne) !important;
+  font-size: 12px !important;
+  text-transform: capitalize !important;
+}
 
 .add-inquiries-btn {
   background-color: var(--accent3) !important;
@@ -1189,6 +1195,13 @@ code {
 
 .inquiries-red-btn {
   background-color: var(--accent3) !important;
+  border-radius: var(--radiusOne) !important;
+  font-size: 12px !important;
+  text-transform: capitalize !important;
+  padding: 9px 25px !important;
+}
+.inquiries-search-btn {
+  background-color: var(--secondary) !important;
   border-radius: var(--radiusOne) !important;
   font-size: 12px !important;
   text-transform: capitalize !important;
