--- a/src/index.css
+++ b/src/index.css
@@ -1829,6 +1829,15 @@ code {
   min-width: 15px !important;
   margin-left: 30px !important;
 }
+.cuisines-list-white-btn-setting {
+  background-color: #ffffff !important;
+  border-radius: var(--radiusOne) !important;
+  font-size: 12px !important;
+  text-transform: capitalize !important;
+  color: var(--secondary) !important;
+  font-weight: 500 !important;
+  min-width: 15px !important;
+}
 
 .cuisines-list-upload-btn {
   background-color: #ffffff !important;
