--- a/src/index.css
+++ b/src/index.css
@@ -2188,7 +2188,7 @@ textarea:-webkit-autofill:active {
   font-size: 12px;
   font-family: var(--fontPrimary);
   font-weight: 400;
-  margin-bottom: 5px;
+  /* margin-bottom: 5px; */
   text-align: center;
   text-transform: capitalize;
   color: var(--secondarytext);
